--- a/css/main.css
+++ b/css/main.css
@@ -15,3 +15,29 @@ html {
 *, *::before, *::after {
   box-sizing: inherit;
 }
+
+body {
+  background-color:  #fef2f4;
+}
+
+h1 {
+  text-align: center;
+  font-size: 5em;
+  font-family: Helvetica, sans-serif;
+}
+
+.chair {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  padding-top: 1em;
+}
+
+.logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100px;
+  padding-top: 2em;
+}
