--- a/css/main.css
+++ b/css/main.css
@@ -22,8 +22,11 @@ body {
 
 h1 {
   text-align: center;
-  font-size: 5em;
+  font-size: 3em;
   font-family: Helvetica, sans-serif;
+  margin-top: .5em;
+  padding-left: .5em;
+  padding-right: .5em;
 }
 
 .chair {
@@ -40,4 +43,16 @@ h1 {
   margin-right: auto;
   width: 100px;
   padding-top: 2em;
+}
+
+@media only screen and (min-width: 22em) {
+  h1 {
+    font-size: 4em;
+  }
+}
+
+@media only screen and (min-width: 40em) {
+  h1 {
+    font-size: 5em;
+  }
 }
