--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,8 @@ h1 {
   margin-right: auto;
   width: 100px;
   padding-top: 2em;
+  padding-bottom: 2em;
+
 }
 
 @media only screen and (min-width: 22em) {
