--- a/css/main.css
+++ b/css/main.css
@@ -26,8 +26,10 @@ body {
 }
 
 .logo {
-  position: absolute;
-  top: 40vh;
-  margin: -2em;
+  width: 10em;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
 
 }
